--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "es6": true,
-        "node": true
+        "node": true,
+        "mocha": true
     },
     "extends": [
         "airbnb-base"
@@ -15,5 +16,6 @@
         "sourceType": "module"
     },
     "rules": {
+      "comma-dangle": 0
     }
 }
