--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "npm run build && nodemon dist/app.js",
     "serve": "nodemon node_modules/.bin/babel-node src/app.js",
-    "test": "mocha --watch --reporter spec --require @babel/register \"src/**/*.test.js\"",
+    "test": "npx nyc mocha --watch --reporter spec --require @babel/register \"src/**/*.test.js\"",
     "lint": "esw src --color",
     "lint:watch": "npm run lint -- --watch",
     "prebuild": "rimraf ./dist && mkdir dist",
-    "build": "babel src -d dist"
+    "build": "npx babel src --out-dir dist --ignore \"src/**/*.test.js\""
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,10 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
+    "@babel/node": "^7.8.7",
+    "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
+    "@babel/preset-stage-0": "^7.8.3",
     "@babel/register": "^7.8.6",
     "babel-plugin-istanbul": "^6.0.0",
     "chai": "^4.2.0",
@@ -40,19 +43,19 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-watch": "^6.0.1",
     "mocha": "^7.1.0",
-    "rimraf": "^3.0.2",
-    "sinon": "^9.0.1"
+    "node-mocks-http": "^1.8.1",
+    "nyc": "^15.0.0",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "@babel/node": "^7.8.7",
     "body-parser": "^1.19.0",
-    "chalk": "^3.0.0",
-    "debug": "^4.1.1",
     "express": "^4.17.1",
     "fast-json-patch": "^3.0.0-1",
     "image-thumbnail": "^1.0.7",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.2"
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.2",
+    "swagger-ui-express": "^4.1.3"
   },
   "nodemonConfig": {
     "restartable": "rs",
